--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,400&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,200;1,300;1,700&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgb(146, 199, 102) 100%);
+  background-repeat: no-repeat;
+  min-height : 100vh; 
+  font-family: "Raleway","Montserrat", "Segoe UI", sans-serif !important;
+}
+
+.clickable{
+  cursor: pointer;
+}
+
+input, p, div {
+  font-family: "Raleway","Montserrat", "Segoe UI", sans-serif !important;
 }
 
 code {
