--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -1,4 +1,4 @@
-.e_com-footer{
+/* .e_com-footer{
 
     height: 100vh;
     background:linear-gradient(ellipse at bottom, rgba(255,254,234,1) 0%, rgba(255,254,234,1) 35%, #60e9bb 100%);
@@ -13,7 +13,7 @@ input[type="text"]{
     border-radius: 50px;
     border-bottom: 3px solid #4797f34f;
     padding: 10px 20px 5px 20px;
-}
+} */
 
 
 
