--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,67 +1,47 @@
-/* .marron{
-width:100%;
-height: 60px;
-} */
-
-.back{
-
+#navbar {
+  display: flex;
   background:rgb(188, 222, 171);
- 
-  border-bottom:1px solid rgb(104, 240, 104);
+  padding: 10px;
+  justify-content: space-between;
 }
-.but{
-  color:white;
-  /* background-color:rgb(166, 211, 155) */
+
+#graine{
+  width:200px;
+}
+
+#loupe{
+  width : 20px; height: 20px;
   position: relative;
-  right: 45px;
-}
-.title{
- 
-width:160px;
-
+  left : -30px;
+  cursor: pointer;
 }
 
-.User{
- 
-  padding-left:10px;
-  width:50px;
-  
+#User, #Shop{
+  width:40px; height: 40px;
+  cursor: pointer;
+  margin-right: 20px;
 }
 
-.graine{
-  width:60px;
-}
-
-.loupe{
-
-width : 15px;
-color:green;
-}
-
-form input:focus button{
-  background-color: green;
+#icon {
+  width: 100px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  margin-right: 30px;
 }
 
 .search{
-  color:white;
   background-color: rgb(166, 211, 155);
-  /* height:40px; */
-  width:500px;
-  border: 0;
+  border-radius: 20px;
+  border : solid white 2px;
+  padding: 10px;
 }
-.Shop > path {
-  fill: "white";
+
+.search:focus {
+  outline: solid greenyellow 3px;
 }
-.Shop{
- 
-  padding-right:10px;
-  width:50px;
-  fill: #FFFFFF;
-}
+
 .search_bar{
-  display:flex;
-  margin:0px;
-  padding:0px;
-  /* background-color: rgb(166, 211, 155);
-  border-radius: 10px; */
+  margin-top: 14px;
+  min-width:200px;
 }
