--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 #navbar {
   display: flex;
   background:rgb(188, 222, 171);
-  padding: 10px;
+  padding: 15px;
   justify-content: space-between;
 }
 
@@ -14,6 +14,11 @@
   position: relative;
   left : -30px;
   cursor: pointer;
+}
+
+#logo {
+  cursor: pointer;
+  margin-right: 10px;
 }
 
 #User, #Shop{
@@ -31,6 +36,7 @@
 }
 
 .search{
+  width: 80%;
   background-color: rgb(166, 211, 155);
   border-radius: 20px;
   border : solid white 2px;
@@ -39,9 +45,11 @@
 
 .search:focus {
   outline: solid greenyellow 3px;
+  background-color: rgb(202, 233, 194);
 }
 
 .search_bar{
-  margin-top: 14px;
+  margin-top: 10px;
+  width: 40vw;
   min-width:200px;
 }
