--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,23 +1,25 @@
 #navbar {
   display: flex;
-  background:rgb(188, 222, 171);
+  background: rgb(188, 222, 171);
   padding: 10px;
   justify-content: space-between;
 }
 
-#graine{
-  width:200px;
+#graine {
+  width: 200px;
 }
 
-#loupe{
-  width : 20px; height: 20px;
+#loupe {
+  width: 20px;
+  height: 20px;
   position: relative;
-  left : -30px;
+  left: -30px;
   cursor: pointer;
 }
 
-#User, #Shop{
-  width:40px; height: 40px;
+#User, #Shop {
+  width: 40px;
+  height: 40px;
   cursor: pointer;
   margin-right: 20px;
 }
@@ -30,10 +32,10 @@
   margin-right: 30px;
 }
 
-.search{
+.search {
   background-color: rgb(166, 211, 155);
   border-radius: 20px;
-  border : solid white 2px;
+  border: solid white 2px;
   padding: 10px;
 }
 
@@ -41,7 +43,30 @@
   outline: solid greenyellow 3px;
 }
 
-.search_bar{
+.search_bar {
   margin-top: 14px;
-  min-width:200px;
+  min-width: 200px;
+}
+
+
+#connexion, #inscription, .vertical-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(166, 211, 155);
+  width : 50%; 
 }
