--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,21 @@
   background-color: rgb(166, 211, 155);
   width : 50%; 
 }
+
+.cart{
+  position : absolute; 
+  background-color: rgba(255, 255, 255, 0.719);
+  height:50vh;
+  width : 300px; 
+  top : 70px;
+  right : 50px;  
+  font-size: 1.25rem;
+  border-radius: .5rem;
+  padding : .5rem; 
+  color : rgb(130, 168, 121);
+  overflow-y: scroll;
+}
+
+#icon{
+  position: relative;
+}
