--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,23 +45,32 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgb(166, 211, 155);
-  width : 50%; 
+  width: 50%;
 }
 
-.cart{
-  position : absolute; 
+.cart {
+  position: absolute;
   background-color: rgba(255, 255, 255, 0.719);
-  height:50vh;
-  width : 300px; 
-  top : 70px;
-  right : 50px;  
+  height: 50vh;
+  width: 300px;
+  top: 70px;
+  right: 50px;
   font-size: 1.25rem;
   border-radius: .5rem;
-  padding : .5rem; 
-  color : rgb(130, 168, 121);
+  padding: .5rem;
+  color: rgb(130, 168, 121);
   overflow-y: scroll;
 }
 
-#icon{
+#icon {
   position: relative;
+}
+
+.cart-total {
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+}
+
+.order {
 }
