--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,25 +6,49 @@
 }
 
 #graine {
-  width: 200px;
+  width: 100px;
+  margin-left: 10px;
+  cursor: pointer;
 }
 
 #loupe {
   width: 20px;
   height: 20px;
   position: relative;
-  left: -45px;
+  left: -50px;
+  top: 4px;
   cursor: pointer;
 }
 
 #User, #Shop {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
   margin-right: 20px;
 }
 
+#search {
+  background-color: rgb(166, 211, 155);
+  border-radius: 20px;
+  border: solid white 2px;
+  padding:.65rem;
+}
 
+#icon {
+  width: 150px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  margin-right: 30px;
+}
+
+input:focus {
+  outline: solid greenyellow 3px;
+}
+
+.search_bar {
+  min-width: 200px;
+}
 
 #connexion, #inscription, .vertical-form {
   display: flex;
