--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -8,11 +8,15 @@
 input[type="text"], input[type="password"], input[type="email"], input[type="number"], textarea {
   margin: 1rem;
   border: 2px solid white;
-  border-radius: .25rem;
+  border-radius: 25rem;
   padding: 10px 20px 5px 20px;
   color: white;
+  border-top: none;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.20),
+  0 15px 12px rgba(0, 0, 0, 0.15);
   background-color: transparent;
   text-transform: uppercase;
+  transform: translateZ(40px)
 }
 
 input {
@@ -59,6 +63,38 @@ input[type="submit"], button {
   min-width: 200px;
 }
 
+
+.profile-section{
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  
+  margin: 1rem;
+  
+  
+}
+
+.bank-details{
+
+  align-self: flex-end;
+  border-radius: 20px;
+  background: linear-gradient(60deg,#5bd63621,#d61f774b);
+  transform: perspective(1000px);
+  transform-style: preserve-3d;
+  box-shadow:  0 15px 40px rgba(0, 0, 0, 0.20),
+                        0 15px 12px rgba(0, 0, 0, 0.15);
+  margin: 1rem;
+  padding-top: 20px;
+  width: 40%;
+  
+}
+.user-details{
+
+  width: 50%;
+  border-radius: 20px;
+  background: rgba(80, 35, 165, 0.13);
+  margin: 1rem;
+}
 
 /* 
 .ocean {
