--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,14 @@
 #navbar {
   display: flex;
-  background: rgb(188, 222, 171);
+  background:rgb(247, 230, 230);
+  /* background: rgb(188, 222, 171); */
   padding: 10px;
   justify-content: space-between;
+  
+}
+
+.search_bar{
+  top:-100px;
 }
 
 #graine {
@@ -10,10 +16,11 @@
 }
 
 #loupe {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   position: relative;
-  left: -45px;
+  top:5px;
+  left: -50px;
   cursor: pointer;
 }
 
@@ -47,3 +54,42 @@
   background-color: rgb(166, 211, 155);
   width : 50%; 
 }
+
+
+.formu{
+  padding:15px 15px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.589);
+  box-shadow:inset 0 20 20px rgb(238, 233, 233);
+}
+
+.btnRegister, .btnLogin{
+display:flex;
+justify-content: center;
+
+}
+ label{
+   color:rgb(13, 70, 13);
+   margin-left:3%;
+ }
+input:focus{
+  background-color:red;
+}
+ .button_submit{
+   border: 2px solid white;
+   border-radius:20px;
+   color:white;
+  background:rgb(13, 70, 13);
+ }
+
+#password, #lastname, #firstname, #confirm_password, #email{
+   background:rgba(0, 0, 0, 0.281);
+   color : rgb(13, 70, 13);
+   border-top:none;
+   border-radius: 20px;
+   box-shadow:inset 0 0 10px rgb(223, 222, 222);
+ }
+
+ #password:focus, #lastname, #firstname, #confirm_password, #email{
+
+ }
