--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -6,13 +6,14 @@
 
 input[type="text"], input[type="password"], input[type="email"], input[type="number"], textarea {
   margin: 1rem;
-  border: 2px solid white;
+  border: 2px solid rgb(185, 245, 107);
   border-radius: 25rem;
   padding: 10px 20px 5px 20px;
-  color: white;
+  /* color: #56752F; */
+  color:  #ffffff54;
   border-top: none;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.20),
-  0 15px 12px rgba(0, 0, 0, 0.15);
+  0 10px 12px rgba(0, 0, 0, 0.15);
   background-color: transparent;
   text-transform: uppercase;
   transform: translateZ(40px)
@@ -24,12 +25,12 @@ input {
 
 input::placeholder {
   text-transform: uppercase;
-  color: white;
+  color:  #73C213;
 
 }
 
 input[type="submit"], button {
-  background-color: white;
+  background-color:   #73c2135d;
   color: green;
   padding: 10px 20px 5px 20px;
   text-transform: uppercase;
@@ -53,7 +54,7 @@ input[type="submit"], button {
 
   align-self: flex-end;
   border-radius: 20px;
-  background: linear-gradient(60deg,#5bd63621,#d61f774b);
+  background: white;
   transform: perspective(1000px);
   transform-style: preserve-3d;
   box-shadow:  0 15px 40px rgba(0, 0, 0, 0.20),
@@ -67,52 +68,7 @@ input[type="submit"], button {
 
   width: 50%;
   border-radius: 20px;
-  background: rgba(80, 35, 165, 0.13);
+  
   margin: 1rem;
 }
 
-/* 
-.ocean {
-  height: 5%;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background: #015871;
-}
-
-.wave {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg) repeat-x;
-  position: absolute;
-  top: -198px;
-  width: 6400px;
-  height: 198px;
-  animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
-  transform: translate3d(0, 0, 0);
-}
-
-.wave:nth-of-type(2) {
-  top: -175px;
-  animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
-  opacity: 1;
-}
-
-@keyframes wave {
-  0% {
-    margin-left: 0;
-  }
-
-  100% {
-    margin-left: -1600px;
-  }
-}
-
-@keyframes swell {
-  0%, 100% {
-    transform: translate3d(0, -25px, 0);
-  }
-
-  50% {
-    transform: translate3d(0, 5px, 0);
-  }
-} */
