--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 #navbar {
   display: flex;
-  background:rgb(247, 230, 230);
+  background:rgb(255, 255, 255);
   /* background: rgb(188, 222, 171); */
   padding: 10px;
   justify-content: space-between;
@@ -28,6 +28,7 @@
 
 #logo {
   cursor: pointer;
+  width:200px;
   margin-right: 10px;
 }
 
@@ -54,7 +55,8 @@
 }
 
 input:focus {
-  outline: solid greenyellow 3px;
+  outline: solid yellowgreen 3px;
+
 }
 
 .search_bar {
@@ -115,25 +117,24 @@ justify-content: center;
 
 }
  label{
+   font-weight: bold;
    color:rgb(13, 70, 13);
    margin-left:3%;
  }
-input:focus{
-  background-color:red;
-}
+
  .button_submit{
-   border: 2px solid white;
+   
    border-radius:20px;
    color:white;
   background:rgb(13, 70, 13);
  }
 
 #password, #lastname, #firstname, #confirm_password, #email{
-   background:rgba(0, 0, 0, 0.281);
+   background:rgb(255, 255, 255);
    color : rgb(13, 70, 13);
    border-top:none;
    border-radius: 20px;
-   box-shadow:inset 0 0 10px rgb(223, 222, 222);
+  
  }
 
 
