--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,7 +34,7 @@ h1, h3{
   margin : 1rem; 
 }
 html {
-  background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgba(255, 255, 255, 0) 100%);
+  /* background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgba(255, 255, 255, 0) 100%); */
 }
 
 code {
