--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -11,10 +11,8 @@ input[type="text"], input[type="password"], input[type="email"], input[type="num
   padding: 10px 20px 5px 20px;
   color: white;
   border-top: none;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.20),
-  0 15px 12px rgba(0, 0, 0, 0.15);
-  background-color: transparent;
-  text-transform: uppercase;
+  /* box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.20),
+  0 15px 12px rgba(0, 0, 0, 0.15); */
   transform: translateZ(40px)
 }
 
@@ -23,7 +21,7 @@ input {
 }
 
 input::placeholder {
-  text-transform: uppercase;
+  
   color: white;
 
 }
@@ -43,7 +41,6 @@ input[type="submit"], button {
   display: flex;
   justify-content: space-evenly;
   width: 80%;
-  
   margin: 1rem;
   
   
@@ -61,7 +58,6 @@ input[type="submit"], button {
   margin: 1rem;
   padding-top: 20px;
   width: 40%;
-  
 }
 .user-details{
 
