--- a/client/src/App.css
+++ b/client/src/App.css
@@ -91,23 +91,28 @@ input:focus {
 /************************/
 
 #gallery {
-  width: 70vw;
+  max-width: 1160px;
   margin: 20px auto;
   display: flex;
   flex-wrap: wrap;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+}
+
+#filtres {
+  min-width: 1000px;
+  min-height: 200px;
 }
 
 .thumbnail {
-  width: 200px;
+  width: 250px; height: 250px;
   margin: 10px;
-  display: flex;
-  flex-direction: column;
+  padding: 10px;
   align-items: center;
-  overflow: hidden;
-  border: 2px solid  #76DE62; 
   border-radius: 10px;
   cursor: pointer;
-  background-color: whitesmoke;
+  background-color: rgba(255, 255, 255, 0.5);
+  overflow: hidden;
 }
 
 .thumbnail:hover {
@@ -118,21 +123,54 @@ input:focus {
   transform:scale(1.1);
 }
 
-/* .buttonShop {
-  max-width: 100px;
-  color: whitesmoke;
-  background-color: #76DE62; 
-  border: none;
-  margin: 5px auto;
-} */
-.number {
-  max-width: 50px;
-  margin: 0px;
+.img-wrapper {
+  height: 250px;
+  overflow: hidden;
+  border-radius: 10px;
 }
 
-.info {
-  margin: 10px;
-  width: 180px;
+.number {
+  max-width: 50px;
+  max-height: 30px;
+  margin: 0px;
+  border: 1px solid #22460D;
+  border-radius: 5px;
+}
+
+.number, .buttonShop {
+  margin : 5px;
+}
+
+.infos {
+  width: 270px;
+  position: relative;
+  z-index: 50;
+  top : -60px;
+  left : -10px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.infos:hover {
+  top : -105px;
+}
+
+.sub-info {
+  display: flex;
+}
+
+.sub-info p {
+  margin: 5px 10px 0px 10px;
+}
+
+.name {
+  max-width: 200px;
+}
+
+.thumbnail p {
+  color: #22460D;
+  font-size: 0.8em;
 }
 
 .thumbnail form {
@@ -140,6 +178,16 @@ input:focus {
   display: flex;
   margin: auto;
 }
+
+.cat {
+  min-height: 20px;
+  margin: 0px 10px 5px 10px;
+  font-size: 0.6em;
+  color: #22460D;
+  font-style: italic;
+  text-align: right;
+}
+
 /****************************/
 /**********CART**************/
 /****************************/
