--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -1,22 +1,26 @@
 .e_com-footer{
   height: 100vh;
-  background: linear-gradient(ellipse at bottom, rgba(255, 254, 234, 1) 0%, rgba(255, 254, 234, 1) 35%, #60e9bb 100%);
   overflow: hidden;
 }
 
+.wrapper{
+  display: flex;
+}
+
 input[type="text"], input[type="password"], input[type="email"], input[type="number"], textarea {
-  margin: 1rem;
-  border: 2px solid rgb(185, 245, 107);
-  border-radius: 25rem;
-  padding: 10px 20px 5px 20px;
-  /* color: #56752F; */
-  color:  #ffffff54;
+  border: 2px solid #ffffff;
+  padding: 10px 10px;
+  margin: 15px 10px;
+  color:  #ffffff;
+  border-radius: 20px;
   border-top: none;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.20),
   0 10px 12px rgba(0, 0, 0, 0.15);
+  background: #ffffff;
+  /* opacity: 50%; */
   background-color: transparent;
   text-transform: uppercase;
-  transform: translateZ(40px)
+
 }
 
 input {
@@ -25,50 +29,62 @@ input {
 
 input::placeholder {
   text-transform: uppercase;
-  color:  #73C213;
+  color:  #ffffff;
 
 }
 
 input[type="submit"], button {
-  background-color:   #73c2135d;
-  color: green;
-  padding: 10px 20px 5px 20px;
+  background:   #22460D;
+  color: #ffffff;
+  /* padding: 10px 20px 5px 20px; */
   text-transform: uppercase;
-  border-radius: .25rem;
+  border: solid 2px;
+  border-radius: 10px;
   outline: none;
+  /* width: 400px; */
+  padding: 10px;
+  align-self: flex-end;
+  display: flex;
+  cursor: pointer;
 }
-
 
 
 .profile-section{
   display: flex;
   justify-content: space-evenly;
   width: 80%;
-  
   margin: 1rem;
-  
-  
 }
 
 .bank-details{
-
-  align-self: flex-end;
+  /* align-self: center; */
   border-radius: 20px;
-  background: white;
-  transform: perspective(1000px);
-  transform-style: preserve-3d;
-  box-shadow:  0 15px 40px rgba(0, 0, 0, 0.20),
-                        0 15px 12px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
+  /* background-color: #ffffff; */
+  /* opacity: 0.6; */
+  /* box-shadow:  0 15px 40px rgba(0, 0, 0, 0.20),
+                        0 15px 12px rgba(0, 0, 0, 0.15); */
   margin: 1rem;
   padding-top: 20px;
   width: 40%;
   
 }
 .user-details{
-
   width: 50%;
   border-radius: 20px;
-  
   margin: 1rem;
+}
+
+.adress-section{
+ align-self: flex-start;
+ margin-left: 260px;
+}
+.edit-adress{
+  position: absolute;
+ 
+ color: #ffffff;
+  align-self: center;
+  margin-top: 30em;
+  margin-left: 25em;
 }
 
