--- a/client/src/App.css
+++ b/client/src/App.css
@@ -196,6 +196,23 @@ input:focus {
   top: -150px;
 }
 
+/************************/
+/*******FICHE DETAIL*****/
+/************************/
+
+#ficheDetail {
+  max-width: 70vw;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.titleName {
+
+}
+
 /****************************/
 /**********CART**************/
 /****************************/
