--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,12 +4,11 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgb(146, 199, 102) 100%); */
   background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgb(146, 199, 102) 100%);
   background-repeat: no-repeat;
   min-height : 100vh; 
   font-family: "Montserrat", "Segoe UI", sans-serif !important;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 
 .clickable{
@@ -21,18 +20,18 @@ label{
   width: 150px;
 }  
 
-/* input, input::placeholder, button, textarea{
+input, input::placeholder, button, textarea{
   font-size: 1.25rem;
   border-radius: .25rem;
-} */
+}
 
-/* button{
+button{
   margin : 1rem; 
-} */
+}
 
-h1, h3, h4{
-  color : #56752F; 
-  /* margin : 1rem;  */
+h1, h3{
+  color : white; 
+  margin : 1rem; 
 }
 html {
   background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgba(255, 255, 255, 0) 100%);
