--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,8 +10,8 @@
   flex-direction: column;
 }
 
-.error{
-  color : red; 
+.error {
+  color: red;
 }
 
 input:focus {
@@ -105,7 +105,8 @@ input:focus {
 }
 
 .thumbnail {
-  width: 250px; height: 250px;
+  width: 250px;
+  height: 250px;
   margin: 10px;
   padding: 10px;
   align-items: center;
@@ -116,11 +117,15 @@ input:focus {
 }
 
 .thumbnail:hover {
-  -webkit-transform:scale(1.1); /* Safari and Chrome */
-  -moz-transform:scale(1.1); /* Firefox */
-  -ms-transform:scale(1.1); /* IE 9 */
-  -o-transform:scale(1.1); /* Opera */
-  transform:scale(1.1);
+  -webkit-transform: scale(1.1);
+  /* Safari and Chrome */
+  -moz-transform: scale(1.1);
+  /* Firefox */
+  -ms-transform: scale(1.1);
+  /* IE 9 */
+  -o-transform: scale(1.1);
+  /* Opera */
+  transform: scale(1.1);
 }
 
 .img-wrapper {
@@ -138,22 +143,22 @@ input:focus {
 }
 
 .number, .buttonShop {
-  margin : 5px;
+  margin: 5px;
 }
 
 .infos {
   width: 270px;
   position: relative;
   z-index: 50;
-  top : -90px;
-  left : -10px;
+  top: -90px;
+  left: -10px;
   background-color: rgba(255, 255, 255, 0.9);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
 
 .infos:hover {
-  top : -130px;
+  top: -130px;
 }
 
 .sub-info {
@@ -180,7 +185,7 @@ input:focus {
 }
 
 .cat {
-  min-height: 20px;
+  min-height: 40px;
   margin: 0px 10px 5px 10px;
   font-size: 0.6em;
   color: #22460D;
@@ -192,7 +197,7 @@ input:focus {
   background-color: rgba(255, 255, 255, 0.7);
   position: relative;
   z-index: 50;
-  padding : .25rem;
+  padding: .25rem;
   top: -150px;
 }
 
@@ -226,7 +231,7 @@ input:focus {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgb(166, 211, 155);
-  width : 50%; 
+  width: 50%;
 }
 
 /***************************/
