--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -2,25 +2,20 @@
   height: 100vh;
   overflow: hidden;
 }
+h3{
+  color: #22460D;
+}
 
 .wrapper{
   display: flex;
 }
 
 input[type="text"], input[type="password"], input[type="email"], input[type="number"], textarea {
-  border: 2px solid #ffffff;
-  padding: 10px 10px;
+  padding: 5px 5px;
   margin: 15px 10px;
-  color:  #ffffff;
-  border-radius: 20px;
-  border-top: none;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.20),
-  0 10px 12px rgba(0, 0, 0, 0.15);
-  background: #ffffff;
-  /* opacity: 50%; */
-  background-color: transparent;
+  border-radius: 10px;
   text-transform: uppercase;
-
+  border: solid 2px #22460D ;
 }
 
 input {
@@ -29,19 +24,17 @@ input {
 
 input::placeholder {
   text-transform: uppercase;
-  color:  #ffffff;
+  color:  black;
 
 }
 
 input[type="submit"], button {
   background:   #22460D;
   color: #ffffff;
-  /* padding: 10px 20px 5px 20px; */
   text-transform: uppercase;
-  border: solid 2px;
+  border: solid 2px #ffffff ;
   border-radius: 10px;
   outline: none;
-  /* width: 400px; */
   padding: 10px;
   align-self: flex-end;
   display: flex;
@@ -54,16 +47,14 @@ input[type="submit"], button {
   justify-content: space-evenly;
   width: 80%;
   margin: 1rem;
+  background-color: #ffffff;
+  opacity: 0.5;
+  border-radius: 10px;
 }
 
 .bank-details{
-  /* align-self: center; */
   border-radius: 20px;
   color: #ffffff;
-  /* background-color: #ffffff; */
-  /* opacity: 0.6; */
-  /* box-shadow:  0 15px 40px rgba(0, 0, 0, 0.20),
-                        0 15px 12px rgba(0, 0, 0, 0.15); */
   margin: 1rem;
   padding-top: 20px;
   width: 40%;
@@ -78,11 +69,13 @@ input[type="submit"], button {
 .adress-section{
  align-self: flex-start;
  margin-left: 260px;
+ background-color: #ffffff;
+ border-radius: 10px;
+ opacity: 0.5;
 }
 .edit-adress{
   position: absolute;
- 
- color: #ffffff;
+  color: #ffffff;
   align-self: center;
   margin-top: 30em;
   margin-left: 25em;
