[Update] App.css/descriptionArticle.js - begin style

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -233,10 +233,15 @@ input:focus {
   margin: 20px auto;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .titleName {
+  color: #22460D;
+}
 
+.photo {
+  display: flex;
 }
 /****************************/
 /**********CART**************/
