--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,16 @@ input:focus {
   background-color: rgb(202, 233, 194);
 }
 
+button, input[type="submit"] {
+  background-color: #24460D;
+  border: 2px solid white;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  padding: .25rem .5rem;
+  font-size: 1rem;
+}
+
 /********************/
 /****NAVBARRE********/
 /********************/
@@ -155,6 +165,7 @@ input:focus {
   background-color: rgba(255, 255, 255, 0.9);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  height: 300px;
 }
 
 .infos:hover {
@@ -193,19 +204,19 @@ input:focus {
   text-align: right;
 }
 
-.new, .promo, .firstPrice{
+.new, .promo, .firstPrice {
   background-color: rgba(255, 255, 255, 0.7);
   position: relative;
   z-index: 60;
-  padding : .25rem;
+  padding: .25rem;
   top: -170px;
 }
 
 .promo {
   font-weight: bold;
   color: red;
-  top : -220px;
-  left : 22px;
+  top: -220px;
+  left: 22px;
   font-size: 1.5em;
 }
 
@@ -213,13 +224,14 @@ input:focus {
   width: 42px;
   font-weight: bold;
   left: 200px;
-  top : -230px;
+  top: -230px;
 }
 
 .noPromo {
   display: block;
   height: 75px;
 }
+
 /****************************/
 /**********CART**************/
 /****************************/
@@ -288,4 +300,27 @@ input:focus {
 .category-item:hover {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.52);
+}
+
+.orders-admin {
+  padding: 1.5rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 80vw;
+  border-radius: 20px;
+}
+
+.order-admin {
+  padding: 1.5rem;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin : 1.5rem; 
+  width : 350px;
+}
+
+.orders-wrapper{
+  display : flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  /* display: grid; */
+  /* grid-template-columns: repeat(2, 1fr); */
 }
