[ADD] style orders-admin

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -350,10 +350,13 @@ label {
 
 .admin-tab {
   margin: .5rem;
-  /* .tabs{
-display:flex;
-justify-content: center;
-} */
+  font-size: 1.5rem;
+  padding: .5rem 1rem;
+}
+
+.tabs {
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -401,6 +404,7 @@ justify-content: center;
   padding: 1.5rem;
   background-color: rgba(255, 255, 255, 0.5);
   width: 80vw;
+  margin-top: 5rem;
   border-radius: 20px;
 }
 
