--- a/client/src/App.css
+++ b/client/src/App.css
@@ -289,3 +289,30 @@ input:focus {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.52);
 }
+.carteorder{
+  padding: 1.5rem;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin : 1.5rem;
+}
+.ordernext{
+  display: flex;
+  justify-content: center;
+}
+
+.order-total{
+
+}
+
+.order-wrapper{
+  background-color: rgba(255, 255, 255, .5);  
+  padding : 1.5rem; 
+  width : 80vw;
+  border-radius: 20px;
+  margin-top: 5rem;
+}
+
+.order{
+  padding : 1.5rem; 
+
+}
