--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -35,7 +35,27 @@ input::placeholder {
 .profile-section{
   display: flex;
   justify-content: space-evenly;
-  /* width: 80%; */
+  /* 
+  
+  
+  +
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  .git */
   margin: 1rem;
   background-color: #ffffff;
   opacity: 0.5;
