--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,6 +29,13 @@ button, input[type="submit"] {
   font-size: 1rem;
 }
 
+.green {
+  color :rgb(13, 70, 13);
+}
+
+li {
+  list-style: none;
+}
 /********************/
 /****NAVBARRE********/
 /********************/
@@ -90,11 +97,6 @@ button, input[type="submit"] {
   justify-content: space-between;
   margin-top: 10px;
   margin-right: 30px;
-}
-
-input:focus {
-  outline: solid yellowgreen 3px;
-
 }
 
 .search_bar {
@@ -248,7 +250,6 @@ input:focus {
   height: 75px;
 }
 
-<<<<<<< HEAD
 /************************/
 /*******FICHE DETAIL*****/
 /************************/
@@ -261,6 +262,7 @@ input:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 10px;
 }
 
 .titleName {
@@ -269,18 +271,51 @@ input:focus {
 
 .photos {
   display: flex;
-  max-width: 65vw;
+  flex-direction: column;
+  max-width: 800px;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid rgb(13, 70, 13);
 }
 
-.imgPrincipal {
-  width: 500px; height: 500px;
+.imgPrincipale {
+  width: 100%; height: 100%;
 }
 
 .imgSecondaire {
   width: 100px; height: 100px;
+  margin: 5px;
 }
-=======
->>>>>>> d34bd40f29a53a9da0318bf8317236b58d4e9f3f
+
+.smPhotos {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  max-width: 60vw;
+}
+
+.lgPhoto {
+  max-width: 500px; 
+}
+
+.infoDetail {
+  display: flex;
+}
+
+#ficheDetail p {
+  max-width: 60vw;
+  margin: 10px;
+}
+
+#leaveComment {
+  /* width: 50vw;
+  min-height: 300px; */
+  border: none;
+  border-radius: 10px;
+  margin: 10px;
+}
 /****************************/
 /**********CART**************/
 /****************************/
