--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,13 +19,14 @@ input:focus {
   background-color: rgb(202, 233, 194);
 }
 
-button, input[type="submit"] {
-  background-color: #24460D;
+button,
+input[type="submit"] {
+  background-color: #24460d;
   border: 2px solid white;
   border-radius: 10px;
   color: white;
   cursor: pointer;
-  padding: .25rem .5rem;
+  padding: 0.25rem 0.5rem;
   font-size: 1rem;
 }
 
@@ -41,7 +42,6 @@ button, input[type="submit"] {
   justify-content: space-between;
   height: 120px;
   max-height: 100px;
-
 }
 
 .search_bar {
@@ -74,7 +74,10 @@ button, input[type="submit"] {
   margin-right: 10px;
 }
 
-#User, #Shop, #Admin, .icon {
+#User,
+#Shop,
+#Admin,
+.icon {
   width: 50px;
   height: 50px;
   cursor: pointer;
@@ -83,10 +86,10 @@ button, input[type="submit"] {
 
 #search {
   /* background-color: rgb(166, 211, 155); */
-  background-color:#A1D37E;
+  background-color: #a1d37e;
   border-radius: 20px;
   border: solid white 2px;
-  padding: .65rem;
+  padding: 0.65rem;
 }
 
 #icon {
@@ -99,7 +102,6 @@ button, input[type="submit"] {
 
 input:focus {
   outline: solid yellowgreen 3px;
-
 }
 
 .search_bar {
@@ -111,7 +113,9 @@ input:focus {
 /*******CONNECTION*******/
 /************************/
 
-#connexion, #inscription, .vertical-form {
+#connexion,
+#inscription,
+.vertical-form {
   display: flex;
   flex-direction: column;
 }
@@ -168,11 +172,12 @@ input:focus {
   max-width: 50px;
   max-height: 30px;
   margin: 0px;
-  border: 1px solid #22460D;
+  border: 1px solid #22460d;
   border-radius: 5px;
 }
 
-.number, .buttonShop {
+.number,
+.buttonShop {
   margin: 5px;
 }
 
@@ -205,7 +210,7 @@ input:focus {
 }
 
 .thumbnail p {
-  color: #22460D;
+  color: #22460d;
   font-size: 0.8em;
 }
 
@@ -219,16 +224,18 @@ input:focus {
   min-height: 40px;
   margin: 0px 10px 5px 10px;
   font-size: 0.6em;
-  color: #22460D;
+  color: #22460d;
   font-style: italic;
   text-align: right;
 }
 
-.new, .promo, .firstPrice {
+.new,
+.promo,
+.firstPrice {
   background-color: rgba(255, 255, 255, 0.7);
   position: relative;
   z-index: 60;
-  padding: .25rem;
+  padding: 0.25rem;
   top: -170px;
 }
 
@@ -264,24 +271,23 @@ input:focus {
   top: 70px;
   right: 50px;
   font-size: 1.25rem;
-  border-radius: .5rem;
-  padding: .5rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
   color: rgb(130, 168, 121);
   overflow-y: scroll;
 }
 
-
 .formu {
   padding: 15px 15px;
   border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.600);
+  background-color: rgba(255, 255, 255, 0.6);
   box-shadow: inset 0 0 20px rgb(238, 233, 233);
 }
 
-.btnRegister, .btnLogin {
+.btnRegister,
+.btnLogin {
   display: flex;
   justify-content: center;
-
 }
 
 label {
@@ -291,20 +297,21 @@ label {
 }
 
 .button_submit {
-
   border-radius: 20px;
   color: white;
   background: rgb(13, 70, 13);
 }
 
-#password, #lastname, #firstname, #confirm_password, #email {
+#password,
+#lastname,
+#firstname,
+#confirm_password,
+#email {
   background: rgb(255, 255, 255);
   color: rgb(13, 70, 13);
   border-top: none;
   border-radius: 20px;
-
 }
-
 
 .search:focus {
   outline: solid greenyellow 3px;
@@ -354,28 +361,19 @@ label {
 }
 
 .admin-tab {
-  margin: .5rem;
+  margin: 0.5rem;
   /* .tabs{
 display:flex;
 justify-content: center;
 } */
 }
 
-
-
-
-
-
-
-
-
 .add_article {
   width: 100%;
 }
 
-
 .admin-tab {
-  margin: .5rem;
+  margin: 0.5rem;
   cursor: pointer;
 }
 
@@ -384,44 +382,18 @@ justify-content: center;
 }
 
 .category-item {
-  padding: .5rem;
+  padding: 0.5rem;
   width: max-content;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
 
 .category-item:hover {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.52);
 }
-.carteorder{
-  padding: 1.5rem;
-  border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin : 1.5rem;
-}
-.ordernext{
-  display: flex;
-  justify-content: center;
-}
 
-.order-total{
-
-}
-
-.order-wrapper{
-  background-color: rgba(255, 255, 255, .5);  
-  padding : 1.5rem; 
-  width : 80vw;
-  border-radius: 20px;
-  margin-top: 5rem;
-}
-
-.order{
-  padding : 1.5rem; 
-
-}
 .vertical-form {
-  background: rgba(255, 255, 255, 0.600);
+  background: rgba(255, 255, 255, 0.6);
   box-shadow: inset 0 0 30px rgb(255, 255, 255);
   border-radius: 20px;
   padding: 200px 450px 10px 10px;
@@ -449,4 +421,8 @@ justify-content: center;
   flex-wrap: wrap;
   /* display: grid; */
   /* grid-template-columns: repeat(2, 1fr); */
+}
+
+#category > ul > li {
+  list-style: none;
 }
