--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -11,13 +11,14 @@ h3{
 }
 
 input[type="text"], input[type="password"], input[type="email"], input[type="number"], textarea {
-  padding: 5px 5px;
-  margin: 15px 10px;
-  border-radius: 10px;
-  text-transform: uppercase;
+ 
+  border-radius: 20px;
   border: none ;
+  
   height: 30px;
+  margin: 10px auto;
   background: white;
+
   
 }
 
@@ -35,31 +36,12 @@ input::placeholder {
 .profile-section{
   display: flex;
   justify-content: space-evenly;
-  /* 
-  
-  
-  +
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  .git */
   margin: 1rem;
-  background-color: #ffffff;
-  opacity: 0.5;
-  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.60);
+  box-shadow: inset 0 0 30px rgb(255, 255, 255);
+  border-radius: 20px;
+ width: 400px;
+ padding: 20px;
 }
 
 .bank-details{
