--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,8 +18,9 @@ input:focus {
   outline: solid greenyellow 3px;
   background-color: rgb(255, 255, 255);
 }
-h1{
-  color:white;
+
+h1 {
+  color: white;
 }
 
 button,
@@ -344,6 +345,8 @@ label {
   transform: translate(-50%, -50%);
   background-color: rgb(166, 211, 155);
   width: 50%;
+  padding : 1rem; 
+  border-radius: .5rem;
 }
 
 /***************************/
@@ -394,6 +397,10 @@ label {
   border-radius: 0.25rem;
 }
 
+.category-item > * {
+  margin: .5rem ;
+}
+
 .category-item:hover {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.52);
@@ -431,16 +438,28 @@ label {
   /* grid-template-columns: repeat(2, 1fr); */
 }
 
-#category > ul > li {
+#category>ul>li {
   list-style: none;
 }
-.carteorder{
+
+.carteorder {
   padding: 1.5rem;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.5);
-  margin : 1.5rem;
+  margin: 1.5rem;
 }
-.ordernext{
+
+.ordernext {
   display: flex;
   justify-content: center;
 }
+
+
+.order-wrapper, .new-category-form, .categories-admin, .profile-form {
+  width: 80vw;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  margin-top: 5rem;
+  padding: 1.5rem;
+}
+
