--- a/client/src/App.css
+++ b/client/src/App.css
@@ -168,21 +168,25 @@ li {
 
 .number {
   max-width: 50px;
-  max-height: 30px;
   margin: 0px;
-  border: 1px solid #22460D;
+  border: none;
   border-radius: 5px;
 }
 
-.number, .buttonShop {
+/* .number, .buttonShop {
   margin: 5px;
+  max-height: 30px;
+} */
+
+.infos form {
+  max-height: 30px;
 }
 
 .infos {
   width: 270px;
   position: relative;
   z-index: 50;
-  top: -160px;
+  top: -225px;
   left: -10px;
   background-color: rgba(255, 255, 255, 0.9);
   border-bottom-left-radius: 10px;
@@ -191,7 +195,7 @@ li {
 }
 
 .infos:hover {
-  top: -225px;
+  top: -300px;
 }
 
 .sub-info {
@@ -200,10 +204,11 @@ li {
 
 .sub-info p {
   margin: 5px 10px 0px 10px;
+  max-height: 40px;
 }
 
 .name {
-  max-width: 200px;
+  max-width: 190px;
 }
 
 .thumbnail p {
@@ -231,28 +236,26 @@ li {
   position: relative;
   z-index: 60;
   padding: .25rem;
-  top: -170px;
+  top: -200px;
 }
 
 .promo {
   font-weight: bold;
   color: red;
-  top: -220px;
-  left: 22px;
+  top: -280px;
+  left: 160px;
   font-size: 1.5em;
 }
-
 
 .firstPrice {
   width: 42px;
   font-weight: bold;
   left: 200px;
-  top: -230px;
+  top: -290px;
 }
 
 .noPromo {
-  display: block;
-  height: 75px;
+  height: 130px;
 }
 
 /************************/
