--- a/client/src/App.css
+++ b/client/src/App.css
@@ -455,11 +455,11 @@ label {
 }
 
 
-.order-wrapper, .new-category-form, .categories-admin, .profile-form {
+.order-wrapper, .new-category-form, .categories-admin{
   width: 80vw;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
+  border-radius: 10px;
   margin-top: 5rem;
   padding: 1.5rem;
+
 }
 
