--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -15,10 +15,9 @@ input[type="text"], input[type="password"], input[type="email"], input[type="num
   padding: 5px 5px;
   margin: 15px 10px;
   border-radius: 10px;
+  background-color: white;
+  border: none;
 
-  border: none ;
-  height: 30px;
-  background: white;
 }
 
 input {
@@ -36,10 +35,11 @@ input::placeholder {
   display: flex;
   justify-content: space-evenly;
   margin: 1rem;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   opacity: 0.5;
   border-radius: 10px;
 }
+
 
 .bank-details {
   border-radius: 20px;
@@ -58,7 +58,7 @@ input::placeholder {
 .adress-section {
   align-self: flex-start;
   margin-left: 260px;
-  background-color: #ffffff;
+  
   border-radius: 10px;
   opacity: 0.5;
 }
