[FIX] img position on article

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -198,6 +198,12 @@ li {
   border-radius: 10px;
 }
 
+.img-wrapper img{
+  object-fit: cover;
+  width : 100%; 
+  height: 100%;
+}
+
 .number {
   max-width: 50px;
   margin: 0px;
