first comment example

--- a/client/src/styles/Cart.css
+++ b/client/src/styles/Cart.css
@@ -4,8 +4,8 @@
     justify-content: space-between;
    
 }
-.cart-price>p{
+/* .cart-price>p{
     margin-bottom: ".25rem";
     color:"red";
     font-style: large;
-}
+} */
