--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -11,7 +11,8 @@ h3 {
   display: flex;
 }
 
-input[type="text"], input[type="password"], input[type="email"], input[type="number"], textarea {
+/* input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="range"]*/
+input, textarea, select {
   padding: 10px 10px;
   margin: 15px 10px;
   border-radius: 2rem;
