--- a/client/src/styles/ArticleDetails.css
+++ b/client/src/styles/ArticleDetails.css
@@ -15,6 +15,8 @@
     height: max-content;
     width: 100%;
     padding : .25rem; 
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+
 }
 .comment-body:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
