--- a/client/src/App.css
+++ b/client/src/App.css
@@ -458,6 +458,11 @@ li {
   display: flex;
   justify-content: space-evenly;
   gap: 1rem;
+  width: 100%;
+}
+
+.article-bottom{
+  margin-top: 2rem;
 }
 
 .categories-detail{
