--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,16 +6,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgb(146, 199, 102) 100%); */
   background-repeat: no-repeat;
-  min-height : 100vh; 
+  min-height: 100vh;
   font-family: "Montserrat", "Segoe UI", sans-serif !important;
   font-size: 1.5rem;
+  animation: roll 2s infinite;
 }
 
-html{
+@keyframes roll {
+  from {
+    transform : rotate(0deg); 
+  }
+  to{
+    transform : rotate(360deg);
+  }
+}
+
+html {
   scroll-behavior: smooth;
 }
 
-.clickable{
+.clickable {
   cursor: pointer;
 }
 
@@ -24,19 +34,20 @@ html{
   width: 230px;
 }   */
 
-input, input::placeholder, button, textarea, select{
+input, input::placeholder, button, textarea, select {
   font-size: 1.25rem;
   border-radius: .25rem;
 }
 
-button{
-  margin : 1rem; 
+button {
+  margin: 1rem;
 }
 
-h1, h3{
-  color : white; 
-  margin : 1rem; 
+h1, h3 {
+  color: white;
+  margin: 1rem;
 }
+
 /* html {
   background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgba(255, 255, 255, 0) 100%);
 } */
@@ -44,4 +55,4 @@ h1, h3{
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-} 
+}
