--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -15,11 +15,14 @@ h3 {
 input, textarea, select {
   padding: 10px 10px;
   margin: 15px 10px;
-  border-radius:0px;
+  border-radius: 0px;
   background-color: rgba(255, 255, 255);
-  border:none;
-  border-bottom:2px solid darkgreen;
+  border: none;
   /* border-bottom:2px solid darkgreen; */
+}
+
+input, textarea {
+  border-bottom: 2px solid darkgreen;
 }
 
 input {
@@ -55,12 +58,12 @@ input::placeholder {
   margin: 1rem;
 }
 
-.hover_save:hover{
-  color:limegreen;
+.hover_save:hover {
+  color: limegreen;
 }
 
-.hover_annuler:hover{
-  color:red;
+.hover_annuler:hover {
+  color: red;
 }
 
 .lg-char {
@@ -73,6 +76,6 @@ input::placeholder {
   margin: 0px 0px 0px 10px;
 }
 
-::placeholder{
+::placeholder {
   font-weight: bold;
 }
